# AIM-mips

./: .gitignore  Makefile.am  acinclude.m4  configure.ac  env.am  modules.am  riscv-notes.txt
boot/: Makefile.am  bootlibc.c  bootmain.c
boot/arch/: Makefile.am
boot/arch/armv7a/: bootasm.S
boot/arch/i386/: Makefile.am  boot.lds.S  bootasm.S
boot/arch/riscv/: Makefile.am  boot.lds.S  bootasm.S  bootmain.c
drivers/: Makefile.am
drivers/block/: Makefile.am  virtblock.c
drivers/char/: Makefile.am
drivers/common/: Makefile.am  core.c
drivers/io/: Makefile.am  io-mem.c  io-mem.h  io-port.c  io-port.h
drivers/serial/: Makefile.am  uart-ns16550-hw.h  uart-ns16550.c  uart-ns16550.h  uart.c  uart.h
include/: Makefile.am  bitmap.h  bitops.h  elf.h  fcntl.h  list.h  util.h
include/aim/: Makefile.am  boot.h  early_kmmap.h  initcalls.h  irq.h  limits.h  mmu.h  namespace.h  percpu.h  pmm.h  proc.h  sched.h  smp.h  sync.h  trap.h  uvm.h  vmm.h
include/arch/armv7a/: Makefile.am  arch-boot.h  arch-irq.h  arch-mmu.h  arch-sync.h  arch-trap.h  atomic.h  context.h  platform.h
include/arch/i386/: Makefile.am  arch-bitops.h  arch-boot.h  arch-io.h  arch-irq.h  arch-lapic.h  arch-mmu.h  arch-mp.h  arch-sync.h  arch-trap.h  asm.h  atomic.h  context.h  platform.h
include/arch/mips/: Makefile.am  addrspace.h  arch-bitops.h  arch-boot.h  arch-irq.h  arch-mmu.h  arch-smp.h  arch-sync.h  arch-trap.h  asm.h  atomic.h  context.h  cp0regdef.h  decode.h  mipsregs.h  pgtable.h  platform.h  regdef.h  regs.h  stack.h  tlb.h
include/arch/mips/mach-loongson1/: Makefile.am  mach-platform.h
include/arch/mips/mach-loongson3a/: Makefile.am  mach-platform.h
include/arch/riscv/: asm.h  (+12 more)
include/asm-generic/: Makefile.am  vmraim.lds.h
include/linux/: rbtree.h  rbtree_augmented.h
include/raim/: Makefile.am  boot.h  bus.h  console.h  debug.h  device.h  early_kmmap.h  file.h  fs.h  gfp.h  init.h  initcalls.h  io.h  irq.h  limits.h  mmu.h  namespace.h  panic.h  percpu.h  pmm.h  proc.h  sched.h  smp.h  sync.h  trap.h  uvm.h  vmm.h
include/sys/: param.h  types.h
kern/: Makefile.am
kern/arch/armv7a/: Makefile.am  arch_early_init.c  arch_mmu.c  entry.S  proc.c  switch.S  vmraim.lds.S
kern/arch/i386/: Makefile.am  arch_early_init.c  arch_lapic.c  arch_mmu.c  arch_mp.c  arch_smp.c  arch_trap.c  entry.S  pgoperation.c  proc.c  switch.S  trap_asm.S  vectors.pl  vmaim.lds.S  vmraim.lds.S
kern/arch/i386/mach-pc/: devtree.c
kern/arch/mips/: Makefile.am  arch_early_init.c  arch_mmu.c  arch_smp.c  arch_trap.c  entry.S  pgtable.c  proc.c  switch.S  tlbex.S  trapentry.S  vmaim.lds.S  vmraim.lds.S
kern/arch/mips/mach-loongson1/: Makefile.am  devtree.c
kern/arch/mips/mach-loongson3a/: Makefile.am  devtree.c
kern/arch/riscv/: Makefile.am  arch_early_init.c  arch_mmu.c  arch_smp.c  arch_trap.c  entry.S  proc.c  vmaim.lds.S  vmraim.lds.S
kern/arch/riscv/mach-riscv-virt/: Makefile.am  console.c  panic.c
kern/dev/: Makefile.am  bus.c  console.c  device.c  driver.c
kern/dev/index/: Makefile.am  devlist.c  index.c
kern/fs/: Makefile.am  fs.c  v6fs.c
kern/init/: Makefile.am  early_init.c  init.c
kern/lib/: Makefile.am
kern/lib/libbitmap/: Makefile.am  bitmap_and.c  bitmap_andnot.c  bitmap_clear.c  bitmap_complement.c  bitmap_empty.c  bitmap_equal.c  bitmap_find_first_bit.c  bitmap_find_first_zero_bit.c  bitmap_find_last_bit.c  bitmap_find_next_bit.c  bitmap_find_next_zero_bit.c  bitmap_full.c  bitmap_intersects.c  bitmap_set.c  bitmap_shift_left.c  bitmap_shift_right.c  bitmap_subset.c  bitmap_weight.c  bitmap_xor.c
kern/mm/: Makefile.am  jump.c  mmu.c  test.c  uvm.c
kern/mm/kmmap/: Makefile.am  early_kmmap.c
kern/mm/pmm/: Makefile.am  palloc.c  pmm.c
kern/mm/vmm/: Makefile.am  simple.c  vmm.c
kern/panic/: Makefile.am  panic.c
kern/proc/: Makefile.am  initproc.c  namespace.c  proc.c  proctree.c
kern/proc/sched/: Makefile.am  sched.c  scheduler.c
kern/trap/: Makefile.am  trap.c
lib/: Makefile.am  README  generic.c  rbtree.c
lib/libbitmap/: bitmap_and.c  bitmap_andnot.c  bitmap_clear.c  bitmap_empty.c  bitmap_find_first_zero_bit.c  bitmap_find_last_bit.c  bitmap_find_next_bit.c  bitmap_find_next_zero_bit.c  bitmap_full.c  bitmap_intersects.c  bitmap_set.c  bitmap_shift_left.c  bitmap_subset.c  bitmap_weight.c
lib/libc/: Makefile.am  memcmp.c  memcpy.c  memmove.c  memset.c  snprintf.c  stdarg.h  stddef.h  stdio.h  strchr.c  strcmp.c  strcpy.c  string.h  strlcpy.c  strlen.c  strncpy.c
m4/: aim_arch.m4  aim_mach.m4  raim_arch.m4  raim_mach.m4  raim_prog_cc_c11.m4  raim_summary.m4
(+2 files in other folders)
