# Copyright (C) 2016 David Gao <davidgao1001@gmail.com>
#
# This file is part of AIM.
#
# AIM is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# AIM is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/env.am

SUBDIRS = \
	mach-loongson3a

noinst_HEADERS = \
	arch-bitops.h \
	arch-boot.h \
	arch-io.h \
	arch-irq.h \
	arch-mmu.h \
	arch-sync.h \
	arch-trap.h \
	asm.h \
	atomic.h \
	context.h \
	cp0regdef.h \
	platform.h \
	regdef.h

