# Copyright (C) 2016 Gan Quan <coin2028@hotmail.com>
#
# This file is part of AIM.
#
# AIM is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# AIM is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/env.am

noinst_LTLIBRARIES = libbitmap.la

libbitmap_la_SOURCES = \
		       bitmap_and.c \
		       bitmap_andnot.c \
		       bitmap_clear.c \
		       bitmap_complement.c \
		       bitmap_empty.c \
		       bitmap_equal.c \
		       bitmap_find_first_bit.c \
		       bitmap_find_first_zero_bit.c \
		       bitmap_find_last_bit.c \
		       bitmap_find_next_bit.c \
		       bitmap_find_next_zero_bit.c \
		       bitmap_full.c \
		       bitmap_intersects.c \
		       bitmap_or.c \
		       bitmap_set.c \
		       bitmap_shift_left.c \
		       bitmap_shift_right.c \
		       bitmap_subset.c \
		       bitmap_weight.c \
		       bitmap_xor.c

